Primeras configuraciones de footbar

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,66 @@
         </div>
         <div class="md:hidden mb-4" id="menu-opciones"></div>
     </div>
+    <footer class="">
+        <div class="pt-12 px-8 xl:px-24">
+            <div class="grid grid-cols-6 gap-8 items-start">
+                <div class="col-span-2 pt-8">
+                    <div class="flex justify-between">
+                        <img src="./img/logo-claro.svg" class="h-20">
+                        <img src="./img/github.svg">
+                    </div>
+                    <p class="text-sm">
+                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
+                        combate
+                        actual para
+                        salvar al medio ambiente en Quetzaltenango (por ahora)
+                    </p>
+                </div>
+                <div class="col-span-3">
+                    <h4 class="text-center text-lg">Contacto</h4>
+                    <div class="grid grid-cols-2">
+                        <div class="py-4">
+                            <div class="py-2">
+                                <h5>Andrea Morales</h5>
+                                <p class="text-xs">agmh.116@gmail.com</p>
+                                <a class="text-xs" href="https://github.com/AGMH16">https://github.com/AGMH16</a>
+                            </div>
+                            <div class="py-2">
+                                <h5>Kelvin Cano</h5>
+                                <p class="text-xs">allecan52@gmail.com</p>
+                                <a class="text-xs" href="https://github.com/Allecan">https://github.com/Allecan</a>
+                            </div>
+                        </div>
+                        <div class="py-4">
+                            <div class="py-2">
+                                <h5>Fernando Juárez</h5>
+                                <p class="text-xs">ferrafterminador@gmail.com</p>
+                                <a class="text-xs"
+                                    href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
+                            </div>
+                            <div class="py-2">
+                                <h5>Zoila Sánchez</h5>
+                                <p class="text-xs">zesanchez1998@gmail.com</p>
+                                <a class="text-xs"
+                                    href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="text-lg">Secciones</h4>
+                    <ul>
+                        <li><a href="./pages/Blog.html">Blog Ambiental</a></li>
+                        <li><a href="#">Eventos Ambientales</a></li>
+                        <li><a href="#">Venta de productos ecológicos</a></li>
+                        <li><a href="./pages/AboutUs.html">Acerca de</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p class="text-center p-8">© 2022 - 2022 bitJAKE</p>
+        </div>
+    </footer>
     <script src="./js/funcionalidades.js"></script>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </body>
