Creacion de Footer responsive

--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -125,6 +125,64 @@
             </div>
         </div>
     </div>
+    <footer class="">
+        <div class="pt-4 md:pt-12 px-4 xl:px-24">
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
+                <div class="md:col-span-4 pt-8">
+                    <div class="flex justify-between pb-4">
+                        <img src="../img/logo-claro.svg" class="h-16">
+                        <img src="../img/github.svg">
+                    </div>
+                    <p class="text-sm">
+                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
+                        combate
+                        actual para
+                        salvar al medio ambiente en Quetzaltenango (por ahora)
+                    </p>
+                </div>
+                <div class="md:col-span-5 md:ml-8">
+                    <h4 class="text-center text-lg md:pr-6 pr-8 md:pl-12 xl:pl-4 pt-4 md:pt-0">Contacto</h4>
+                    <div class="grid grid-cols-2 pl-4">
+                        <div class="py-4">
+                            <div class="py-2">
+                                <h5>Andrea Morales</h5>
+                                <p>agmh.116@gmail.com</p>
+                                <a href="https://github.com/AGMH16">https://github.com/AGMH16</a>
+                            </div>
+                            <div class="py-2">
+                                <h5>Kelvin Cano</h5>
+                                <p>allecan52@gmail.com</p>
+                                <a href="https://github.com/Allecan">https://github.com/Allecan</a>
+                            </div>
+                        </div>
+                        <div class="py-4 md:pl-8">
+                            <div class="py-2">
+                                <h5>Fernando Juárez</h5>
+                                <p>ferrafterminador@gmail.com</p>
+                                <a href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
+                            </div>
+                            <div class="py-2">
+                                <h5>Zoila Sánchez</h5>
+                                <p>zesanchez1998@gmail.com</p>
+                                <a href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="md:col-span-3 md:ml-16 h-full text-center md:text-left hidden md:inline">
+                    <h4 class="text-lg pb-4">Secciones</h4>
+                    <ul class="h-1/2 flex flex-col justify-around">
+                        <li><a href="./Blog.html">Blog Ambiental</a></li>
+                        <li><a href="#">Eventos Ambientales</a></li>
+                        <li><a href="#">Productos ecológicos</a></li>
+                        <li><a href="./AboutUs.html">Acerca de</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="md:mt-8 mt-4">
+            <p class="text-center p-4 md:p-8">© 2022 - 2022 bitJAKE</p>
+        </div>
+    </footer>
 </body>
 
 </html>
