--- a/src/index.html
+++ b/src/index.html
@@ -128,11 +128,11 @@
         <div class="md:hidden mb-4" id="menu-opciones"></div>
     </div>
     <footer class="">
-        <div class="pt-12 px-8 xl:px-24">
-            <div class="grid grid-cols-6 gap-8 items-start">
-                <div class="col-span-2 pt-8">
-                    <div class="flex justify-between">
-                        <img src="./img/logo-claro.svg" class="h-20">
+        <div class="pt-4 md:pt-12 px-4 xl:px-24">
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
+                <div class="md:col-span-4 pt-8">
+                    <div class="flex justify-between pb-4">
+                        <img src="./img/logo-claro.svg" class="h-16">
                         <img src="./img/github.svg">
                     </div>
                     <p class="text-sm">
@@ -142,49 +142,47 @@
                         salvar al medio ambiente en Quetzaltenango (por ahora)
                     </p>
                 </div>
-                <div class="col-span-3">
-                    <h4 class="text-center text-lg">Contacto</h4>
-                    <div class="grid grid-cols-2">
+                <div class="md:col-span-5 md:ml-8">
+                    <h4 class="text-center text-lg md:pr-6 pr-8 md:pl-12 xl:pl-4 pt-4 md:pt-0">Contacto</h4>
+                    <div class="grid grid-cols-2 pl-4">
                         <div class="py-4">
                             <div class="py-2">
                                 <h5>Andrea Morales</h5>
-                                <p class="text-xs">agmh.116@gmail.com</p>
-                                <a class="text-xs" href="https://github.com/AGMH16">https://github.com/AGMH16</a>
+                                <p>agmh.116@gmail.com</p>
+                                <a href="https://github.com/AGMH16">https://github.com/AGMH16</a>
                             </div>
                             <div class="py-2">
                                 <h5>Kelvin Cano</h5>
-                                <p class="text-xs">allecan52@gmail.com</p>
-                                <a class="text-xs" href="https://github.com/Allecan">https://github.com/Allecan</a>
+                                <p>allecan52@gmail.com</p>
+                                <a href="https://github.com/Allecan">https://github.com/Allecan</a>
                             </div>
                         </div>
-                        <div class="py-4">
+                        <div class="py-4 md:pl-8">
                             <div class="py-2">
                                 <h5>Fernando Juárez</h5>
-                                <p class="text-xs">ferrafterminador@gmail.com</p>
-                                <a class="text-xs"
-                                    href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
+                                <p>ferrafterminador@gmail.com</p>
+                                <a href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
                             </div>
                             <div class="py-2">
                                 <h5>Zoila Sánchez</h5>
-                                <p class="text-xs">zesanchez1998@gmail.com</p>
-                                <a class="text-xs"
-                                    href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
+                                <p>zesanchez1998@gmail.com</p>
+                                <a href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h4 class="text-lg">Secciones</h4>
-                    <ul>
+                <div class="md:col-span-3 md:ml-16 h-full text-center md:text-left hidden md:inline">
+                    <h4 class="text-lg pb-4">Secciones</h4>
+                    <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./pages/Blog.html">Blog Ambiental</a></li>
                         <li><a href="#">Eventos Ambientales</a></li>
-                        <li><a href="#">Venta de productos ecológicos</a></li>
+                        <li><a href="#">Productos ecológicos</a></li>
                         <li><a href="./pages/AboutUs.html">Acerca de</a></li>
                     </ul>
                 </div>
             </div>
-            <hr>
-            <p class="text-center p-8">© 2022 - 2022 bitJAKE</p>
+            <hr class="md:mt-8 mt-4">
+            <p class="text-center p-4 md:p-8">© 2022 - 2022 bitJAKE</p>
         </div>
     </footer>
     <script src="./js/funcionalidades.js"></script>
