Blog individual plantilla

--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -147,24 +147,26 @@
                             <div class="py-2">
                                 <h5>Andrea Morales</h5>
                                 <p>agmh.116@gmail.com</p>
-                                <a href="https://github.com/AGMH16">https://github.com/AGMH16</a>
+                                <a href="https://github.com/AGMH16" target="_blank">https://github.com/AGMH16</a>
                             </div>
                             <div class="py-2">
                                 <h5>Kelvin Cano</h5>
                                 <p>allecan52@gmail.com</p>
-                                <a href="https://github.com/Allecan">https://github.com/Allecan</a>
+                                <a href="https://github.com/Allecan" target="_blank">https://github.com/Allecan</a>
                             </div>
                         </div>
                         <div class="py-4 md:pl-8">
                             <div class="py-2">
                                 <h5>Fernando Juárez</h5>
                                 <p>ferrafterminador@gmail.com</p>
-                                <a href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
+                                <a href="https://github.com/Rafterminador"
+                                    target="_blank">https://github.com/Rafterminador</a>
                             </div>
                             <div class="py-2">
                                 <h5>Zoila Sánchez</h5>
                                 <p>zesanchez1998@gmail.com</p>
-                                <a href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
+                                <a href="https://github.com/ZoilaSanchez"
+                                    target="_blank">https://github.com/ZoilaSanchez</a>
                             </div>
                         </div>
                     </div>
