--- a/src/pages/Blog-individual.html
+++ b/src/pages/Blog-individual.html
@@ -8,12 +8,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../output.css'>
     <link rel="shortcut icon" href="../img/Favicon.svg">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -23,8 +17,8 @@
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
                 <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
-                        <a href="#">
-                            <li class="nav-item mx-2 nav-item-active">Blog</li>
+                        <a href="./Blog.html">
+                            <li class="nav-item mx-2">Blog</li>
                         </a>
                         <a href="#">
                             <li class="nav-item mx-2">Eventos</li>
@@ -40,16 +34,46 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-        <div id="content" class="inline">
-            <section id="Blog-principal"></section>
-            <section id="Blogs" class="grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-12 my-8"></section>
+    </div>
+    <div class="grid grid-cols-4">
+        <div class="mx-6 md:mx-32 col-span-3">
+            <p class="texto-verde-alterno">Publicado el 5 de Mayo del 2021</p>
+            <h1 class="text-3xl text-center md:text-left md:text-5xl mb-4">
+                ¡Se parte del cambio y empatiza por el medio ambiente!
+            </h1>
+            <div class="flex items-center mb-12">
+                <p class="texto-verde-alterno texto-gris-blog"><strong>Escrito por: Ferñao Da Silva Perez</strong>
+                </p>
+                <img src="../img/autor-profile.svg">
+            </div>
         </div>
-        <div class="flex justify-end md:hidden">
-            <span class="material-symbols-outlined menu-responsive" id="menu">
-                menu
-            </span>
+        <div class="col-span-1"></div>
+    </div>
+    <img src="../img/image-template-1.png" class="w-4/5">
+    <div class="grid grid-cols-4 mb-16">
+        <div class="mx-6 md:mx-32 col-span-3">
+            <h2 class="text-xl text-center md:text-left md:text-3xl mt-8 mb-4" id="prueba">Blog Ambiental</h2>
+            <p class="text-base text-center md:text-xl md:text-left mb-4">Blog Ambiental: Hemos creado está área en
+                la página para que los amantes de la naturaleza puedan compartir diversa
+                información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
+            </p>
+            <img src="../img/image-template-2.png">
+            <h2 class="text-xl text-center md:text-left md:text-3xl mt-8 mb-4">Blog Ambiental</h2>
+            <p class="text-base text-center md:text-xl md:text-left  mb-4">Blog Ambiental: Hemos creado está área en
+                la página para que los amantes de la naturaleza puedan compartir diversa
+                información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
+            </p>
         </div>
-        <div class="md:hidden mb-4" id="menu-opciones"></div>
+        <div class="col-span-1 mt-8 ">
+            <ul class="col-span-11">
+                <li class="mb-4"><span class="side-bar-blog">a</span><a class="ml-2" href="#prueba"><strong>Titulo
+                            1</strong></a></li>
+                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
+                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
+                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
+            </ul>
+        </div>
+    </div>
     </div>
     <footer class="">
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
@@ -73,26 +97,24 @@
                             <div class="py-2">
                                 <h5>Andrea Morales</h5>
                                 <p>agmh.116@gmail.com</p>
-                                <a href="https://github.com/AGMH16" target="_blank">https://github.com/AGMH16</a>
+                                <a href="https://github.com/AGMH16">https://github.com/AGMH16</a>
                             </div>
                             <div class="py-2">
                                 <h5>Kelvin Cano</h5>
                                 <p>allecan52@gmail.com</p>
-                                <a href="https://github.com/Allecan" target="_blank">https://github.com/Allecan</a>
+                                <a href="https://github.com/Allecan">https://github.com/Allecan</a>
                             </div>
                         </div>
                         <div class="py-4 md:pl-8">
                             <div class="py-2">
                                 <h5>Fernando Juárez</h5>
                                 <p>ferrafterminador@gmail.com</p>
-                                <a href="https://github.com/Rafterminador"
-                                    target="_blank">https://github.com/Rafterminador</a>
+                                <a href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
                             </div>
                             <div class="py-2">
                                 <h5>Zoila Sánchez</h5>
                                 <p>zesanchez1998@gmail.com</p>
-                                <a href="https://github.com/ZoilaSanchez"
-                                    target="_blank">https://github.com/ZoilaSanchez</a>
+                                <a href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
                             </div>
                         </div>
                     </div>
@@ -100,10 +122,10 @@
                 <div class="md:col-span-3 md:ml-16 h-full text-center md:text-left hidden md:inline">
                     <h4 class="text-lg pb-4">Secciones</h4>
                     <ul class="h-1/2 flex flex-col justify-around">
-                        <li><a href="./Blog.html">Blog Ambiental</a></li>
-                        <li><a href="#">Eventos Ambientales</a></li>
-                        <li><a href="#">Productos ecológicos</a></li>
-                        <li><a href="./AboutUs.html">Acerca de</a></li>
+                        <li><a href="./Blog.html" target="_blank">Blog Ambiental</a></li>
+                        <li><a href="#" target="_blank">Eventos Ambientales</a></li>
+                        <li><a href="#" target="_blank">Productos ecológicos</a></li>
+                        <li><a href="./AboutUs.html" target="_blank">Acerca de</a></li>
                     </ul>
                 </div>
             </div>
@@ -111,10 +133,8 @@
             <p class="text-center p-4 md:p-8">© 2022 - 2022 bitJAKE</p>
         </div>
     </footer>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/funcionalidadesBlog.js"></script>
-    <script src="../js/funcionalidades.js"></script>
+    <script src="../js/funcionalidadesBlogIndividual.js"></script>
 </body>
 
 </html>
