Agregando blog Individual Cabecera

--- a/src/pages/Blog-individual.html
+++ b/src/pages/Blog-individual.html
@@ -35,20 +35,8 @@
             <hr class="mt-1 separador mb-8">
         </nav>
     </div>
-    <div class="grid grid-cols-4">
-        <div class="mx-6 md:mx-32 col-span-3">
-            <p class="texto-verde-alterno">Publicado el 5 de Mayo del 2021</p>
-            <h1 class="text-3xl text-center md:text-left md:text-5xl mb-4">
-                ¡Se parte del cambio y empatiza por el medio ambiente!
-            </h1>
-            <div class="flex items-center mb-12">
-                <p class="texto-verde-alterno texto-gris-blog"><strong>Escrito por: Ferñao Da Silva Perez</strong>
-                </p>
-                <img src="../img/autor-profile.svg">
-            </div>
-        </div>
-        <div class="col-span-1"></div>
-    </div>
+    <section id="cabecera">
+    </section>
     <img src="../img/image-template-1.png" class="w-4/5">
     <div class="grid grid-cols-4 mb-16">
         <div class="mx-6 md:mx-32 col-span-3">
