--- a/src/pages/Blog-individual.html
+++ b/src/pages/Blog-individual.html
@@ -37,31 +37,18 @@
     </div>
     <section id="cabecera">
     </section>
-    <img src="../img/image-template-1.png" class="w-4/5">
-    <div class="grid grid-cols-4 mb-16">
-        <div class="mx-6 md:mx-32 col-span-3">
-            <h2 class="text-xl text-center md:text-left md:text-3xl mt-8 mb-4" id="prueba">Blog Ambiental</h2>
-            <p class="text-base text-center md:text-xl md:text-left mb-4">Blog Ambiental: Hemos creado está área en
-                la página para que los amantes de la naturaleza puedan compartir diversa
-                información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
-            </p>
-            <img src="../img/image-template-2.png">
-            <h2 class="text-xl text-center md:text-left md:text-3xl mt-8 mb-4">Blog Ambiental</h2>
-            <p class="text-base text-center md:text-xl md:text-left  mb-4">Blog Ambiental: Hemos creado está área en
-                la página para que los amantes de la naturaleza puedan compartir diversa
-                información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
-            </p>
+    <!-- <img src="../img/image-template-1.png" class="w-4/5"> -->
+    <img class="w-4/5" id="imagenPrincipal">
+    <section class="grid grid-cols-4 mb-16">
+        <div class="mx-6 md:mx-32 col-span-3" id="contenido">
         </div>
-        <div class="col-span-1 mt-8 ">
-            <ul class="col-span-11">
-                <li class="mb-4"><span class="side-bar-blog">a</span><a class="ml-2" href="#prueba"><strong>Titulo
-                            1</strong></a></li>
-                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
-                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
-                <li class="mb-4"><a class="side-bar-link-inactive ml-4">Titulo 2 ipsum sit sed dasim</a></li>
+        <div class="col-span-1 mt-8">
+            <ul id="indice">
+                <li class="mb-4"><span class="side-bar-blog">a</span><a class="ml-2" href="#prueba">
+                        <strong>Indice</strong></a></li>
             </ul>
         </div>
-    </div>
+    </section>
     </div>
     <footer class="">
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
