Blog individual responsive

--- a/src/pages/Blog-individual.html
+++ b/src/pages/Blog-individual.html
@@ -39,10 +39,10 @@
     </section>
     <!-- <img src="../img/image-template-1.png" class="w-4/5"> -->
     <img class="w-4/5" id="imagenPrincipal">
-    <section class="grid grid-cols-4 mb-16">
-        <div class="mx-6 md:mx-32 col-span-3" id="contenido">
+    <section class="md:grid md:grid-cols-4 mb-16">
+        <div class="mx-6 md:mx-32 md:col-span-3" id="contenido">
         </div>
-        <div class="col-span-1 mt-8">
+        <div class="md:col-span-1 mt-8 hidden md:inline">
             <ul id="indice">
                 <li class="mb-4"><span class="side-bar-blog">a</span><a class="ml-2" href="#prueba">
                         <strong>Indice</strong></a></li>
