Pagina de productos proximamente agregada

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                         <a href="#">
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
-                        <a href="#">
+                        <a href="./pages/Productos.html">
                             <li class="nav-item mx-2">Productos Eco</li>
                         </a>
                         <a href="./pages/AboutUs.html">
@@ -112,7 +112,7 @@
                         y todos los interesados puedan recurrir en busca de su producto o servicio.
                     </p>
                     <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="#">Empieza a comprarlos</a>
+                        <a href="./pages/Productos.html">Empieza a comprarlos</a>
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
@@ -178,7 +178,7 @@
                     <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./pages/Blog.html">Blog Ambiental</a></li>
                         <li><a href="#">Eventos Ambientales</a></li>
-                        <li><a href="#">Productos ecológicos</a></li>
+                        <li><a href="./pages/Productos.html">Productos ecológicos</a></li>
                         <li><a href="./pages/AboutUs.html">Acerca de</a></li>
                     </ul>
                 </div>
