--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -29,7 +29,7 @@
                         <a href="#">
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
-                        <a href="#">
+                        <a href="./Productos.html">
                             <li class="nav-item mx-2">Productos Eco</li>
                         </a>
                         <a href="./AboutUs.html">
@@ -102,7 +102,7 @@
                     <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./Blog.html">Blog Ambiental</a></li>
                         <li><a href="#">Eventos Ambientales</a></li>
-                        <li><a href="#">Productos ecológicos</a></li>
+                        <li><a href="./Productos.html">Productos ecológicos</a></li>
                         <li><a href="./AboutUs.html">Acerca de</a></li>
                     </ul>
                 </div>
