Eventos individual y responsive

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                         <a href="./pages/Blog.html">
                             <li class="nav-item mx-2">Blog</li>
                         </a>
-                        <a href="#">
+                        <a href="./pages/Eventos.html">
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
                         <a href="./pages/Productos.html">
@@ -88,7 +88,7 @@
                         muchas personas te apoyen y se unan a tu idea.
                     </p>
                     <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="#">Empieza a descubrirlos</a>
+                        <a href="./pages/Eventos.html">Empieza a descubrirlos</a>
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
@@ -177,7 +177,7 @@
                     <h4 class="text-lg pb-4">Secciones</h4>
                     <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./pages/Blog.html">Blog Ambiental</a></li>
-                        <li><a href="#">Eventos Ambientales</a></li>
+                        <li><a href="./pages/Eventos.html">Eventos Ambientales</a></li>
                         <li><a href="./pages/Productos.html">Productos ecológicos</a></li>
                         <li><a href="./pages/AboutUs.html">Acerca de</a></li>
                     </ul>
