--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -26,7 +26,7 @@
                         <a href="#">
                             <li class="nav-item mx-2 nav-item-active">Blog</li>
                         </a>
-                        <a href="#">
+                        <a href="./Eventos.html">
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
                         <a href="./Productos.html">
@@ -101,7 +101,7 @@
                     <h4 class="text-lg pb-4">Secciones</h4>
                     <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./Blog.html">Blog Ambiental</a></li>
-                        <li><a href="#">Eventos Ambientales</a></li>
+                        <li><a href="./Eventos.html">Eventos Ambientales</a></li>
                         <li><a href="./Productos.html">Productos ecológicos</a></li>
                         <li><a href="./AboutUs.html">Acerca de</a></li>
                     </ul>
