--- a/src/pages/Blog-individual.html
+++ b/src/pages/Blog-individual.html
@@ -20,7 +20,7 @@
                         <a href="./Blog.html">
                             <li class="nav-item mx-2">Blog</li>
                         </a>
-                        <a href="#">
+                        <a href="./Eventos.html">
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
                         <a href="./Productos.html">
@@ -97,7 +97,7 @@
                     <h4 class="text-lg pb-4">Secciones</h4>
                     <ul class="h-1/2 flex flex-col justify-around">
                         <li><a href="./Blog.html" target="_blank">Blog Ambiental</a></li>
-                        <li><a href="#" target="_blank">Eventos Ambientales</a></li>
+                        <li><a href="./Eventos.html" target="_blank">Eventos Ambientales</a></li>
                         <li><a href="./Productos.html" target="_blank">Productos ecológicos</a></li>
                         <li><a href="./AboutUs.html" target="_blank">Acerca de</a></li>
                     </ul>
