--- a/src/pages/Eventos-individuales.html
+++ b/src/pages/Eventos-individuales.html
@@ -24,7 +24,7 @@
                             <li class="nav-item mx-2">Eventos</li>
                         </a>
                         <a href="./Productos.html">
-                            <li class="nav-item mx-2 nav-item-active">Productos Eco</li>
+                            <li class="nav-item mx-2">Productos Eco</li>
                         </a>
                         <a href="./AboutUs.html">
                             <li class="nav-item ml-2">Acerca de</li>
@@ -34,7 +34,42 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-        <img src="../img/Productos Portada.svg" class="md:mb-8 mb-32">
+    </div>
+    <section id="cabecera">
+    </section>
+    <div class="flex justify-center md:justify-start">
+        <img class="w-4/5" id="imagenPrincipal">
+    </div>
+    <section class="md:grid md:grid-cols-4 mb-16">
+        <div class="mx-6 md:mx-32 md:col-span-3" id="contenido">
+        </div>
+        <div class="md:col-span-1 mt-8 hidden md:inline">
+            <div class="grid grid-cols-12 items-center mb-8">
+                <div class="col-span-2 flex justify-center">
+                    <img src="../img/fecha.svg">
+                </div>
+                <div class="col-span-10">
+                    <p id="fecha" class="ml-2"></p>
+                </div>
+            </div>
+            <div class="grid grid-cols-12 items-center mb-8">
+                <div class="col-span-2 flex justify-center">
+                    <img src="../img/hora.svg">
+                </div>
+                <div class="col-span-10">
+                    <p id="hora" class="ml-2"></p>
+                </div>
+            </div>
+            <div class="grid grid-cols-12 items-center mb-8">
+                <div class="col-span-2 flex justify-center">
+                    <img src="../img/Ubicacion.svg">
+                </div>
+                <div class="col-span-10">
+                    <p id="ubicacion" class="ml-2"></p>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
     <footer class="">
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
@@ -58,26 +93,24 @@
                             <div class="py-2">
                                 <h5>Andrea Morales</h5>
                                 <p>agmh.116@gmail.com</p>
-                                <a href="https://github.com/AGMH16" target="_blank">https://github.com/AGMH16</a>
+                                <a href="https://github.com/AGMH16">https://github.com/AGMH16</a>
                             </div>
                             <div class="py-2">
                                 <h5>Kelvin Cano</h5>
                                 <p>allecan52@gmail.com</p>
-                                <a href="https://github.com/Allecan" target="_blank">https://github.com/Allecan</a>
+                                <a href="https://github.com/Allecan">https://github.com/Allecan</a>
                             </div>
                         </div>
                         <div class="py-4 md:pl-8">
                             <div class="py-2">
                                 <h5>Fernando Juárez</h5>
                                 <p>ferrafterminador@gmail.com</p>
-                                <a href="https://github.com/Rafterminador"
-                                    target="_blank">https://github.com/Rafterminador</a>
+                                <a href="https://github.com/Rafterminador">https://github.com/Rafterminador</a>
                             </div>
                             <div class="py-2">
                                 <h5>Zoila Sánchez</h5>
                                 <p>zesanchez1998@gmail.com</p>
-                                <a href="https://github.com/ZoilaSanchez"
-                                    target="_blank">https://github.com/ZoilaSanchez</a>
+                                <a href="https://github.com/ZoilaSanchez">https://github.com/ZoilaSanchez</a>
                             </div>
                         </div>
                     </div>
@@ -85,10 +118,10 @@
                 <div class="md:col-span-3 md:ml-16 h-full text-center md:text-left hidden md:inline">
                     <h4 class="text-lg pb-4">Secciones</h4>
                     <ul class="h-1/2 flex flex-col justify-around">
-                        <li><a href="./Blog.html">Blog Ambiental</a></li>
-                        <li><a href="./Eventos.html">Eventos Ambientales</a></li>
-                        <li><a href="./Productos.html">Productos ecológicos</a></li>
-                        <li><a href="./AboutUs.html">Acerca de</a></li>
+                        <li><a href="./Blog.html" target="_blank">Blog Ambiental</a></li>
+                        <li><a href="./Eventos.html" target="_blank">Eventos Ambientales</a></li>
+                        <li><a href="./Productos.html" target="_blank">Productos ecológicos</a></li>
+                        <li><a href="./AboutUs.html" target="_blank">Acerca de</a></li>
                     </ul>
                 </div>
             </div>
@@ -96,6 +129,8 @@
             <p class="text-center p-4 md:p-8">© 2022 - 2022 bitJAKE</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/funcionalidadesEventoIndividual.js"></script>
 </body>
 
 </html>
