--- a/src/pages/Eventos-individuales.html
+++ b/src/pages/Eventos-individuales.html
@@ -40,6 +40,20 @@
     <div class="flex justify-center md:justify-start">
         <img class="w-4/5" id="imagenPrincipal">
     </div>
+    <div class="md:col-span-1 mt-8 md:hidden">
+        <div class="flex items-center mb-8 w-full justify-center">
+            <img src="../img/fecha.svg">
+            <p id="fecha" class="ml-2"></p>
+        </div>
+        <div class="flex items-center mb-8 w-full justify-center">
+            <img src="../img/hora.svg">
+            <p id="hora" class="ml-2"></p>
+        </div>
+        <div class="flex items-center mb-8 w-full justify-center">
+            <img src="../img/Ubicacion.svg">
+            <p id="ubicacion" class="ml-2"></p>
+        </div>
+    </div>
     <section class="md:grid md:grid-cols-4 mb-16">
         <div class="mx-6 md:mx-32 md:col-span-3" id="contenido">
         </div>
