--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -8,13 +8,24 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../output.css'>
     <link rel="shortcut icon" href="../img/Favicon.svg">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <div class="mx-8 xl:mx-24">
         <nav class="my-2">
-            <div class="flex items-end justify-center">
+            <div class="flex items-end justify-between">
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
+                <div class="flex justify-end md:hidden">
+                    <span class="material-symbols-outlined menu-responsive" id="menu">
+                        menu
+                    </span>
+                </div>
                 <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
                         <a href="./Blog.html">
@@ -34,97 +45,105 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-        <div class="flex justify-center">
-            <h1 class="text-3xl md:text-left md:text-5xl mb-8">
-                ¿<span class="underline underline-offset-8">Quiénes</span> somos?
-            </h1>
-        </div>
-        <p class="text-center mx-4 md:mx-36">
-            Somos estudiantes de la Universidad Rafael Landívar de Quetzaltenango, actualmente cursamos
-            por el ultimo
-            tramo de
-            nuestra aventura por la carrera de Ingeniería en Informática y Sistemas, alistándonos para que, en muy
-            poco tiempo,
-            podamos zambullirnos en aguas laborales
-        </p>
-        <div class="flex justify-center">
-            <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8 texto-verde">
-                Nuestro equipo
+        <div id="content">
+            <div class="flex justify-center">
+                <h1 class="text-3xl md:text-left md:text-5xl mb-8">
+                    ¿<span class="underline underline-offset-8">Quiénes</span> somos?
+                </h1>
+            </div>
+            <p class="text-center mx-4 md:mx-36">
+                Somos estudiantes de la Universidad Rafael Landívar de Quetzaltenango, actualmente cursamos
+                por el ultimo
+                tramo de
+                nuestra aventura por la carrera de Ingeniería en Informática y Sistemas, alistándonos para que, en muy
+                poco tiempo,
+                podamos zambullirnos en aguas laborales
+            </p>
+            <div class="flex justify-center">
+                <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8 texto-verde">
+                    Nuestro equipo
+                </h2>
+            </div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+                <a href="https://github.com/Rafterminador" target="_blank">
+                    <div class="flex flex-col items-center">
+                        <img src="../img/Fernando.svg">
+                        <p class="texto-alterno text-center">Fernando Juarez</p>
+                        <p>Front-end Developer</p>
+                    </div>
+                </a>
+                <a href="https://github.com/Allecan" target="_blank">
+                    <div class="flex flex-col items-center">
+                        <img src="../img/Kelvin.svg">
+                        <p class="texto-alterno text-center">Kelvin Cano</p>
+                        <p>UI Developer</p>
+                    </div>
+                </a>
+                <a href="https://github.com/ZoilaSanchez" target="_blank">
+                    <div class="flex flex-col items-center">
+                        <img src="../img/Zoili.svg">
+                        <p class="texto-alterno text-center">Zoila Sanchez</p>
+                        <p>Back-end Developer</p>
+                    </div>
+                </a>
+                <a href="https://github.com/AGMH16" target="_blank">
+                    <div class="flex flex-col items-center">
+                        <img src="../img/Guadaluper.svg">
+                        <p class="texto-alterno">Andrea Morales</p>
+                        <p>Back-end Developer</p>
+                    </div>
+                </a>
+            </div>
+            <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12 mb-8">
+                ¿Por <span class="underline underline-offset-8">qué</span>?
             </h2>
-        </div>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-            <a href="https://github.com/Rafterminador" target="_blank">
-                <div class="flex flex-col items-center">
-                    <img src="../img/Fernando.svg">
-                    <p class="texto-alterno text-center">Fernando Juarez</p>
-                    <p>Front-end Developer</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+                <div class="mr-8">
+                    <p class="text-center md:text-left">
+                        El motivo de este proyecto es construir y desplegar un sitio web enfocado en representar uno de
+                        los
+                        17
+                        objetivos de
+                        desarrollo sostenible de la agenda 2030 de la ONU, para lo cual escogimos el objetivo #15 “Vida
+                        de
+                        ecosistemas
+                        terrestres”.
+                    </p>
+                    <br>
+                    <p class="text-center md:text-left">
+                        Elegimos enfocarnos en este objetivo porque estamos convencidos que es muy importante
+                        concientizar
+                        acerca
+                        del medio
+                        ambiente para asi proteger a todas las personas, animales y plantas que somos parte de este
+                        medio
+                    </p>
                 </div>
-            </a>
-            <a href="https://github.com/Allecan" target="_blank">
-                <div class="flex flex-col items-center">
-                    <img src="../img/Kelvin.svg">
-                    <p class="texto-alterno text-center">Kelvin Cano</p>
-                    <p>UI Developer</p>
+                <div>
+                    <img src="../img/PorQue.svg" class="h-60">
                 </div>
-            </a>
-            <a href="https://github.com/ZoilaSanchez" target="_blank">
-                <div class="flex flex-col items-center">
-                    <img src="../img/Zoili.svg">
-                    <p class="texto-alterno text-center">Zoila Sanchez</p>
-                    <p>Back-end Developer</p>
-                </div>
-            </a>
-            <a href="https://github.com/AGMH16" target="_blank">
-                <div class="flex flex-col items-center">
-                    <img src="../img/Guadaluper.svg">
-                    <p class="texto-alterno">Andrea Morales</p>
-                    <p>Back-end Developer</p>
-                </div>
-            </a>
-        </div>
-        <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12 mb-8">
-            ¿Por <span class="underline underline-offset-8">qué</span>?
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-            <div class="mr-8">
-                <p class="text-center md:text-left">
-                    El motivo de este proyecto es construir y desplegar un sitio web enfocado en representar uno de los
-                    17
-                    objetivos de
-                    desarrollo sostenible de la agenda 2030 de la ONU, para lo cual escogimos el objetivo #15 “Vida de
-                    ecosistemas
-                    terrestres”.
-                </p>
-                <br>
-                <p class="text-center md:text-left">
-                    Elegimos enfocarnos en este objetivo porque estamos convencidos que es muy importante concientizar
-                    acerca
-                    del medio
-                    ambiente para asi proteger a todas las personas, animales y plantas que somos parte de este medio
-                </p>
             </div>
-            <div>
-                <img src="../img/PorQue.svg" class="h-60">
-            </div>
-        </div>
-        <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12">
-            ¿Para <span class="underline underline-offset-8">qué</span>?
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center mb-8">
-            <div class="mr-8">
-                <p class="text-center md:text-left">
-                    Este sitio esta destinado para cualquier persona que desea familiarizarse con el medio ambiente que
-                    nos rodea gracias a
-                    que ofrecemos informacion mediante nuestro blog ambiental, dar a conocer posibles eventos
-                    ambientales y promover la
-                    venta de productos ecologicos en la ciudad de Quetzaltenango
-                </p>
-            </div>
-            <div>
-                <img src="../img/ParaQuien.svg" class="h-60">
+            <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12">
+                ¿Para <span class="underline underline-offset-8">qué</span>?
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center mb-8">
+                <div class="mr-8">
+                    <p class="text-center md:text-left">
+                        Este sitio esta destinado para cualquier persona que desea familiarizarse con el medio ambiente
+                        que
+                        nos rodea gracias a
+                        que ofrecemos informacion mediante nuestro blog ambiental, dar a conocer posibles eventos
+                        ambientales y promover la
+                        venta de productos ecologicos en la ciudad de Quetzaltenango
+                    </p>
+                </div>
+                <div>
+                    <img src="../img/ParaQuien.svg" class="h-60">
+                </div>
             </div>
         </div>
     </div>
+    <div class="md:hidden mb-4" id="menu-opciones"></div>
     <footer class="">
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
@@ -185,6 +204,7 @@
             <p class="text-center p-4 md:p-8">© 2022 - 2022 bitJAKE</p>
         </div>
     </footer>
+    <script src="../js/funcionalidadesPaginas.js"></script>
 </body>
 
 </html>
