--- a/src/pages/Eventos-individuales.html
+++ b/src/pages/Eventos-individuales.html
@@ -8,13 +8,24 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../output.css'>
     <link rel="shortcut icon" href="../img/Favicon.svg">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <div class="mx-6 xl:mx-24">
         <nav class="my-2">
-            <div class="flex items-end justify-center">
+            <div class="flex items-end justify-between">
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
+                <div class="flex justify-end md:hidden">
+                    <span class="material-symbols-outlined menu-responsive" id="menu">
+                        menu
+                    </span>
+                </div>
                 <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
                         <a href="./Blog.html">
@@ -35,56 +46,58 @@
             <hr class="mt-1 separador mb-8">
         </nav>
     </div>
-    <section id="cabecera">
-    </section>
-    <div class="flex justify-center md:justify-start">
-        <img class="w-4/5" id="imagenPrincipal">
-    </div>
-    <div class="md:col-span-1 mt-8 md:hidden">
-        <div class="flex items-center mb-8 w-full justify-center">
-            <img src="../img/fecha.svg">
-            <p id="fecha" class="ml-2"></p>
+    <div id="content">
+        <section id="cabecera">
+        </section>
+        <div class="flex justify-center md:justify-start">
+            <img class="w-4/5" id="imagenPrincipal">
         </div>
-        <div class="flex items-center mb-8 w-full justify-center">
-            <img src="../img/hora.svg">
-            <p id="hora" class="ml-2"></p>
-        </div>
-        <div class="flex items-center mb-8 w-full justify-center">
-            <img src="../img/Ubicacion.svg">
-            <p id="ubicacion" class="ml-2"></p>
-        </div>
-    </div>
-    <section class="md:grid md:grid-cols-4 mb-16">
-        <div class="mx-6 md:mx-32 md:col-span-3" id="contenido">
-        </div>
-        <div class="md:col-span-1 mt-8 hidden md:inline">
-            <div class="grid grid-cols-12 items-center mb-8">
-                <div class="col-span-2 flex justify-center">
-                    <img src="../img/fecha.svg">
-                </div>
-                <div class="col-span-10">
-                    <p id="fecha" class="ml-2"></p>
-                </div>
+        <div class="md:col-span-1 mt-8 md:hidden">
+            <div class="flex items-center mb-8 w-full justify-center">
+                <img src="../img/fecha.svg">
+                <p id="fecha" class="ml-2"></p>
             </div>
-            <div class="grid grid-cols-12 items-center mb-8">
-                <div class="col-span-2 flex justify-center">
-                    <img src="../img/hora.svg">
-                </div>
-                <div class="col-span-10">
-                    <p id="hora" class="ml-2"></p>
-                </div>
+            <div class="flex items-center mb-8 w-full justify-center">
+                <img src="../img/hora.svg">
+                <p id="hora" class="ml-2"></p>
             </div>
-            <div class="grid grid-cols-12 items-center mb-8">
-                <div class="col-span-2 flex justify-center">
-                    <img src="../img/Ubicacion.svg">
-                </div>
-                <div class="col-span-10">
-                    <p id="ubicacion" class="ml-2"></p>
-                </div>
+            <div class="flex items-center mb-8 w-full justify-center">
+                <img src="../img/Ubicacion.svg">
+                <p id="ubicacion" class="ml-2"></p>
             </div>
         </div>
-    </section>
+        <section class="md:grid md:grid-cols-4 mb-16">
+            <div class="mx-6 md:mx-32 md:col-span-3" id="contenido">
+            </div>
+            <div class="md:col-span-1 mt-8 hidden md:inline">
+                <div class="grid grid-cols-12 items-center mb-8">
+                    <div class="col-span-2 flex justify-center">
+                        <img src="../img/fecha.svg">
+                    </div>
+                    <div class="col-span-10">
+                        <p id="fecha" class="ml-2"></p>
+                    </div>
+                </div>
+                <div class="grid grid-cols-12 items-center mb-8">
+                    <div class="col-span-2 flex justify-center">
+                        <img src="../img/hora.svg">
+                    </div>
+                    <div class="col-span-10">
+                        <p id="hora" class="ml-2"></p>
+                    </div>
+                </div>
+                <div class="grid grid-cols-12 items-center mb-8">
+                    <div class="col-span-2 flex justify-center">
+                        <img src="../img/Ubicacion.svg">
+                    </div>
+                    <div class="col-span-10">
+                        <p id="ubicacion" class="ml-2"></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+    <div class="md:hidden mb-4" id="menu-opciones"></div>
     <footer class="">
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
@@ -145,6 +158,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/funcionalidadesEventoIndividual.js"></script>
+    <script src="../js/funcionalidadesPaginas.js"></script>
 </body>
 
 </html>
